--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h4 class="font-weight-bold">kimcor.mtk LLC ( provisional )</h4>
+            <h4 class="font-weight-bold">kimcor Mkt Inc</h4>
             <p>Address: 265 Eldorado blvd<br>Webster, Texas</p>
             <p>US</p>
             <p>Tel: +01 (832) 940 8245</p>
-            <p>Email: kimcor.mtk@gmail.com</p>
+            <p>Email: supprot@kimcormkt.com</p>
           </div>
         </div>
 
