--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
   <footer id="footer">
     <div class="container py-4">
       <div class="copyright text-center">
-        <a href="policy/index.html">Privacy Plicy</a>
-        <a href="policy/paymentpolicy.html">Payment Plicy</a>
+        <a href="policy/index.html">Privacy Policy</a>
+        <a href="policy/paymentpolicy.html">Payment Policy</a>
         <a href="policy/tac.html">Terms And Conditions</a>
       </div>
     </div>
