--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <li><a href="#features">App Features</a></li>
           <li><a href="#whyus">Why Us</a></li>
           <li><a href="#promise">Promise</a></li>
+          <li><a href="policy/privacy.html">Payment policy</a></li>
           <li><a href="policy/paymentpolicy.html">Payment policy</a></li>
           <li><a href="policy/tac.html">Terms and Conditions</a></li>
           <li class="get-started"><a href="#features">Get Started</a></li>
@@ -223,7 +224,7 @@
   <footer id="footer">
     <div class="container py-4">
       <div class="copyright text-center">
-        <a href="policy/index.html">Privacy Policy</a>
+        <a href="policy/privacy.html">Privacy Policy</a>
         <a href="policy/paymentpolicy.html">Payment Policy</a>
         <a href="policy/tac.html">Terms And Conditions</a>
       </div>
