--- a/policy/tac.html
+++ b/policy/tac.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link font-weight-bold" href="index.html">Home</a>
+              <a class="nav-link font-weight-bold" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link font-weight-bold" href="paymentpolicy.html">Payment Policy</a>
@@ -248,11 +248,9 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h4 class="font-weight-bold">kimcor.mtk LLC ( provisional )</h4>
-            <p>Address: 265 Eldorado blvd<br>Webster, Texas</p>
-            <p>US</p>
+            <h4 class="font-weight-bold">kimcor Mkt Inc</h4>
             <p>Tel: +01 (832) 940 8245</p>
-            <p>Email: kimcor.mtk@gmail.com</p>
+            <p>Email: support@kimcormkt.com</p>
           </div>
         </div>
 
