--- a/policy/paymentpolicy.html
+++ b/policy/paymentpolicy.html
@@ -121,11 +121,9 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h4 class="font-weight-bold">kimcor.mtk LLC ( provisional )</h4>
-            <p>Address: 265 Eldorado blvd<br>Webster, Texas</p>
-            <p>US</p>
+            <h4 class="font-weight-bold">kimcor Mkt Inc</h4>
             <p>Tel: +01 (832) 940 8245</p>
-            <p>Email: kimcor.mtk@gmail.com</p>
+            <p>Email: support@kimcormkt.com</p>
           </div>
         </div>
 
