correction of error

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="#features">App Features</a></li>
           <li><a href="#whyus">Why Us</a></li>
           <li><a href="#promise">Promise</a></li>
-          <li><a href="policy/privacy.html">Payment policy</a></li>
+          <li><a href="policy/privacy.html">Privacy policy</a></li>
           <li><a href="policy/paymentpolicy.html">Payment policy</a></li>
           <li><a href="policy/tac.html">Terms and Conditions</a></li>
           <li class="get-started"><a href="#features">Get Started</a></li>
