--- a/policy/paymentpolicy.html
+++ b/policy/paymentpolicy.html
@@ -33,6 +33,9 @@
               <a class="nav-link font-weight-bold" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link font-weight-bold" href="privacy.html">Home</a>
+            </li>
+            <li class="nav-item">
               <a style="color: #7B53F5" class="nav-link active font-weight-bold" href="paymentpolicy.html">Payment Policy</a>
             </li>
             <li class="nav-item">
