--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -30,8 +30,11 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link font-weight-bold" href="/index.html">Home</a>
+            </li>
             <li class="nav-item active">
-              <a style="color: #7B53F5" class="nav-link active font-weight-bold" href="/index.html">Home</a>
+              <a style="color: #7B53F5" class="nav-link active font-weight-bold" href="privacy.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link font-weight-bold" href="paymentpolicy.html">Payment Policy</a>
