--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -34,7 +34,7 @@
               <a class="nav-link font-weight-bold" href="/index.html">Home</a>
             </li>
             <li class="nav-item active">
-              <a style="color: #7B53F5" class="nav-link active font-weight-bold" href="privacy.html">Home</a>
+              <a style="color: #7B53F5" class="nav-link active font-weight-bold" href="privacy.html">Privacy Policy</a>
             </li>
             <li class="nav-item">
               <a class="nav-link font-weight-bold" href="paymentpolicy.html">Payment Policy</a>
