link to social media

--- a/policy/tac.html
+++ b/policy/tac.html
@@ -260,9 +260,8 @@
         <div class="row mt-4">
           <div class="col text-center">
             <p class="lead">
-              <a href="#" class="mx-2"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-              <a href="#" class="mx-2"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-              <a href="#" class="mx-2"><i class="fa fa-twitter fa-2x"  aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com/kimcorMKTXS" class="mx-2"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/kimcor.mkt/" class="mx-2"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
             </p>
           </div>
         </div>
