--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>Xpress Service</h1>
             <h2>Xpress Service is committed to making sure you're happy with every job.</h2>
             <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
-            <a href="#" class="download-btn"><i class="bx bxl-apple"></i> App Store</a>
+            <a href="https://testflight.apple.com/join/MvwZ2aYO" class="download-btn"><i class="bx bxl-apple"></i> App Store</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2" data-aos="fade-up">
