--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
             <div class="row text-left pt-2">
               <div class="col-12 col-md-6">
-                <p class=" ">Xpress Service, is a platform which is committed to providing home owners and individual contractors with outstanding services that are home based such as plumbing, electrical, HVAC, carpet cleaning, maid service etc. All our service professionals operate on a simple but powerful principle - if a job’s not done right, we’ll make it right.</p>
+                <p class=" ">Xpress Service, is a platform which is committed to providing home owners and individual contractors with outstanding services that are home based such as plumbing, electrical, HVAC, carpet cleaning, maid service etc. All our service professionals operate on a simple but powerful principle - a job’s not done right.</p>
               </div>
               <div class="col-12 col-md-6">
                 <p class=" ">
