--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               When you use Xpress Service, we promise to get your job done right.
             </p>
             <p>       
-              We also promise the most competitive pricing in the market. Receive a lower quote from a local, background-checked pro and we'll match the price. <br>
+              We also promise the most competitive pricing in the market. Receive a lower quote from a local, background-checked pro. <br>
               If the work is unsatisfactory:
             </p>
             <ul>
