--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div>
             <h1>Xpress Service</h1>
             <h2>Xpress Service is committed to making sure you're happy with every job.</h2>
-            <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
+            <a href="https://play.google.com/store/apps/details?id=com.kimcor.xpress_services" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>
             <a href="https://testflight.apple.com/join/MvwZ2aYO" class="download-btn"><i class="bx bxl-apple"></i> App Store</a>
           </div>
         </div>
